  reference). (Dmitry)
- Fixed bug #45151 (Crash with URI/file..php (filename contains 2 dots)).
  (Dmitry)
- Fixed bug #45139 (ReflectionProperty returns incorrect declaring class).
  (Felipe)
- Fixed bug #45028 (CRC32 output endianness is different between crc32() 
  and hash()). (Tony)
- Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format).
  (Ilia)
- Fixed bug #44891 Memory leak using registerPHPFunctions and XSLT Variable 
  as function parameter. (Rob)
- Fixed bug #44830 (Very minor issue with backslash in heredoc). (Matt)
- Fixed bug #44811 (Improve error message when creating a new SoapClient that 
  contains invalid data). (Markus Fischer, David C)
- Fixed bug #44798 (Memory leak assigning value to attribute). (Ilia)
- Fixed bug #44716 (Progress notifications incorrect). (Hannes)
- Fixed bug #44712 (stream_context_set_params segfaults on invalid arguments).
  (Hannes)
- Fixed bug #44617 (wrong HTML entity output when substitute_character=entity).
  (Moriyoshi)
- Fixed bug #44246 (closedir() accepts a file resource opened by fopen()).
  (Dmitry, Tony)
- Fixed bug #44127 (UNIX abstract namespace socket connect does not work).
  (Jani)
- Fixed bug #43993 (mb_substr_count() behaves differently to substr_count() with
  overlapping needles). (Moriyoshi)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines).
  (Nuno)
- Fixed bug #42604 ("make test" fails with --with-config-file-scan-dir=path).
  (Jani)
- Fixed bug #41348 (OCI8: allow compilation with Oracle 8.1). (Chris Jones)

01 May 2008, PHP 5.2.6
- Fixed two possible crashes inside posix extension (Tony)
- Fixed incorrect heredoc handling when label is used within the block. 
  (Matt)
- Fixed possible stack buffer overflow in FastCGI SAPI. (Andrei Nigmatulin)
- Fixed sending of uninitialized paddings which may contain some information. (Andrei Nigmatulin)
- Fixed a bug in formatting timestamps when DST is active in the default timezone (Derick)